--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @use "tailwindcss";
+
+@theme {
+  --breakpoint-2xs: 23rem;
+  --breakpoint-xs: 30rem;
+}
