**feat** created dynamic form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <main class="main">
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
+  <h1 class="text-3xl font-bold underline" routerLink="./dynamic-form">
+    Show Dynamic Form
   </h1>
   <div class="content">
     <div class="left-side">
@@ -11,6 +11,7 @@
 
     </div>
   </div>
+  <router-outlet />
+
 </main>
 
-<router-outlet />
