--- a/src/app/presentation/features/form-renderer/components/dynamic-field/dynamic-field.component.html
+++ b/src/app/presentation/features/form-renderer/components/dynamic-field/dynamic-field.component.html
@@ -1,1 +1,3 @@
-<p>dynamic-field works!</p>
+<label for="{{field.name}}">{{ field.label }}: </label>
+<input id="{{field.name}}" type="{{field.type}}" [formControl]="formControl" />
+
