--- a/src/app/presentation/features/form-designer/components/field-entry/field-entry.component.html
+++ b/src/app/presentation/features/form-designer/components/field-entry/field-entry.component.html
@@ -1,1 +1,37 @@
-<p>field-entry works!</p>
+<form [formGroup]="form" class="card flex justify-center">
+  <div class="flex items-center">
+    <label for="name">Name: </label>
+    <input id="name" type="text" pInputText formControlName="name" />
+  </div>
+
+  <div class="flex items-center">
+    <label for="label">Label: </label>
+    <input id="label" type="text" pInputText formControlName="label" />
+  </div>
+
+  <div class="flex items-center">
+    <label for="required" class="ml-2">Is Required?: </label>
+    <p-checkbox inputId="required" id="required" name="required" value="Is Required?" [binary]="true"
+                formControlName="required" />
+  </div>
+
+  <div class="flex items-center">
+    <label for="type" class="ml-2">Type: </label>
+    <p-select [options]="fieldTypes" inputId="type" id="type" formControlName="type"  placeholder="Select a Type"  optionLabel="type" class="w-full md:w-56" />
+
+  </div>
+
+  @if (true){
+<!--    <p-button label="Search" icon="pi pi-check" (onClick)="addNewOption()" />-->
+
+    <div class="flex items-center">
+      <input type="text" pInputText formControlName="options" />
+    </div>
+  }
+
+  <div class="flex items-center">
+    <label for="validators" class="ml-2">Is Required?: </label>
+    <p-multiselect [options]="" formControlName="validators" id="validators" optionLabel="validators" placeholder="Select validators" [maxSelectedLabels]="5" styleClass="w-full md:w-80"></p-multiselect>
+  </div>
+
+</form>
