**feat** develop more in field-config-form.service.ts / field-entry.component.ts / form-schema.service.ts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,18 @@
 <main class="main">
-  <h1 class="text-3xl font-bold underline" routerLink="./dynamic-form">
-    Show Dynamic Form
+  <h1 class="text-3xl font-bold underline">
+
   </h1>
   <div class="content">
     <div class="left-side">
-
+      <h1 class="text-3xl font-bold underline" routerLink="./create-form">
+        Create Dynamic Form
+      </h1>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
-
+      <h1 class="text-3xl font-bold underline" routerLink="./dynamic-form">
+        Show Dynamic Form
+      </h1>
     </div>
   </div>
   <router-outlet />
