**ref** edited field-config.model.ts und custom changed

--- a/src/app/presentation/features/form-designer/components/field-entry/field-entry.component.html
+++ b/src/app/presentation/features/form-designer/components/field-entry/field-entry.component.html
@@ -30,8 +30,8 @@
   }
 
   <div class="flex items-center">
-    <label for="validators" class="ml-2">Validators: </label>
-    <p-multiselect [options]="" formControlName="validators" id="validators" optionLabel="validators"
+    <label for="validations" class="ml-2">Validations: </label>
+    <p-multiselect [options]="" formControlName="validations" id="validations" optionLabel="validations"
                    placeholder="Select validators" [maxSelectedLabels]="5" styleClass="w-full md:w-80"></p-multiselect>
   </div>
 
