--- a/src/app/presentation/features/form-designer/components/form-entry/form-entry.component.html
+++ b/src/app/presentation/features/form-designer/components/form-entry/form-entry.component.html
@@ -10,7 +10,7 @@
   <ul>
     @for (field of fields; track field.name) {
       <li>
-        {{ field.label }} ({{ field.type }})
+        {{ field | json }}
       </li>
     }
   </ul>
