**ref** edited field-config.model.ts

--- a/src/app/presentation/features/form-renderer/components/dynamic-form/dynamic-form.component.html
+++ b/src/app/presentation/features/form-renderer/components/dynamic-form/dynamic-form.component.html
@@ -1,7 +1,8 @@
-<form [formGroup]="form">
+<form [formGroup]="form" >
   @for (item of formJson.fields; track item.name) {
     <app-dynamic-field [field]="item" [form-control]="form.controls[item.name]"></app-dynamic-field>
   } @empty {
     <span>There are no field.</span>
   }
+  <p-button label="Submit" (click)="onSubmit()"/>
 </form>
