--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,22 @@
-<main class="main">
-  <h1 class="text-3xl font-bold underline">
+<!--<main class="main">-->
+<!--  <h1 class="text-3xl font-bold underline">-->
 
-  </h1>
-  <div class="content">
-    <div class="left-side">
-      <h1 class="text-3xl font-bold underline" routerLink="./create-form">
-        Create Dynamic Form
-      </h1>
-    </div>
-    <div class="divider" role="separator" aria-label="Divider"></div>
-    <div class="right-side">
-      <h1 class="text-3xl font-bold underline" routerLink="./dynamic-form">
-        Show Dynamic Form
-      </h1>
-    </div>
-  </div>
-  <router-outlet />
+<!--  </h1>-->
+<!--  <div class="content">-->
+<!--    <div class="left-side">-->
+<!--      <h1 class="text-3xl font-bold underline" routerLink="./create-form">-->
+<!--        Create Dynamic Form-->
+<!--      </h1>-->
+<!--    </div>-->
+<!--    <div class="divider" role="separator" aria-label="Divider"></div>-->
+<!--    <div class="right-side">-->
+<!--      <h1 class="text-3xl font-bold underline" routerLink="./dynamic-form">-->
+<!--        Show Dynamic Form-->
+<!--      </h1>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--  <router-outlet />-->
 
-</main>
+<!--</main>-->
 
+<router-outlet></router-outlet>
