--- a/src/app/presentation/features/form-designer/components/field-entry/field-entry.component.html
+++ b/src/app/presentation/features/form-designer/components/field-entry/field-entry.component.html
@@ -1,68 +1,68 @@
-<form [formGroup]="form" class="card flex justify-center">
-  <div class="flex items-center">
-    <label for="name">Name: </label>
-    <input id="name" type="text" pInputText formControlName="name" />
-  </div>
-
-  <div class="flex items-center">
-    <label for="label">Label: </label>
-    <input id="label" type="text" pInputText formControlName="label" />
-  </div>
-
-  <div class="flex items-center">
-    <label for="type" class="ml-2">Type: </label>
-    <p-select [options]="fieldTypes" optionLabel="label" optionValue="value" inputId="type" id="type" formControlName="type"
-              placeholder="Select a Type" class="w-full md:w-56" />
-  </div>
-
-<!--  @if (true) {-->
-<!--    &lt;!&ndash;    <p-button label="Search" icon="pi pi-check" (onClick)="addNewOption()" />&ndash;&gt;-->
-
-<!--    <div class="flex items-center">-->
-<!--      <input type="text" pInputText formControlName="options" />-->
-<!--    </div>-->
-<!--  }-->
-
-  <div formGroupName="validation">
-    <div class="flex items-center">
-      <label for="required" class="ml-2">Is Required?: </label>
-      <p-checkbox inputId="required" id="required" name="required" value="Is Required?" [binary]="true"
-                  formControlName="required" />
+<p-fieldset [legend]="fieldsetTitle">
+  <form [formGroup]="form" class="flex flex-col">
+    <div class="card flex flex-col gap-4">
+      <div class="flex flex-col gap-2">
+        <label for="name">Name: </label>
+        <input id="name" type="text" pInputText formControlName="name" />
+      </div>
+      <div class="flex flex-col gap-2">
+        <label for="label">Label: </label>
+        <input id="label" type="text" pInputText formControlName="label" />
+      </div>
+      <div class="flex flex-col gap-2">
+        <label for="type" class="ml-2">Type: </label>
+        <p-select [options]="fieldTypes" optionLabel="label" optionValue="value" inputId="type" id="type"
+                  formControlName="type"
+                  placeholder="Select a Type" class="w-full md:w-56" />
+      </div>
+      <div formGroupName="validation" class="flex flex-col gap-2 grid grid-cols-1 gap-4">
+        <div class="flex items-center">
+          <label for="required" class="ml-2">Is Required?: </label>
+          <p-checkbox inputId="required" id="required" name="required" value="Is Required?" [binary]="true"
+                      formControlName="required" />
+        </div>
+        <div class="flex items-center">
+          <label for="minLength" class="ml-2">minLength: </label>
+          <p-checkbox inputId="minLength" id="minLength" name="minLength" value="" [binary]="true"
+                      formControlName="minLength" />
+        </div>
+        <div class="flex items-center">
+          <label for="maxLength" class="ml-2">maxLength: </label>
+          <p-checkbox inputId="maxLength" id="maxLength" name="maxLength" value="" [binary]="true"
+                      formControlName="maxLength" />
+        </div>
+        <div class="flex items-center">
+          <label for="min" class="ml-2">min: </label>
+          <p-checkbox inputId="min" id="min" name="min" value="" [binary]="true"
+                      formControlName="min" />
+        </div>
+        <div class="flex items-center">
+          <label for="max" class="ml-2">max: </label>
+          <p-checkbox inputId="max" id="max" name="max" value="" [binary]="true"
+                      formControlName="max" />
+        </div>
+        <div class="flex items-center">
+          <label for="email" class="ml-2">email: </label>
+          <p-checkbox inputId="email" id="email" name="email" value="" [binary]="true"
+                      formControlName="email" />
+        </div>
+        <div class="flex items-center">
+          <label for="pattern" class="ml-2">pattern: </label>
+          <p-checkbox inputId="pattern" id="pattern" name="pattern" value="" [binary]="true"
+                      formControlName="pattern" />
+        </div>
+      </div>
+      <div class="flex flex-col gap-2">
+        <p-button label="Add Field" (click)="onSubmit()" />
+      </div>
     </div>
-    <div class="flex items-center">
-      <label for="minLength" class="ml-2">minLength: </label>
-      <p-checkbox inputId="minLength" id="minLength" name="minLength" value="" [binary]="true"
-                  formControlName="minLength" />
-    </div>
-    <div class="flex items-center">
-      <label for="maxLength" class="ml-2">maxLength: </label>
-      <p-checkbox inputId="maxLength" id="maxLength" name="maxLength" value="" [binary]="true"
-                  formControlName="maxLength" />
-    </div>
-    <div class="flex items-center">
-      <label for="min" class="ml-2">min: </label>
-      <p-checkbox inputId="min" id="min" name="min" value="" [binary]="true"
-                  formControlName="min" />
-    </div>
-    <div class="flex items-center">
-      <label for="max" class="ml-2">max: </label>
-      <p-checkbox inputId="max" id="max" name="max" value="" [binary]="true"
-                  formControlName="max" />
-    </div>
-    <div class="flex items-center">
-      <label for="email" class="ml-2">email: </label>
-      <p-checkbox inputId="email" id="email" name="email" value="" [binary]="true"
-                  formControlName="email" />
-    </div>
-    <div class="flex items-center">
-      <label for="pattern" class="ml-2">pattern: </label>
-      <p-checkbox inputId="pattern" id="pattern" name="pattern" value="" [binary]="true"
-                  formControlName="pattern" />
-    </div>
-  </div>
+  </form>
+</p-fieldset>
 
-  <div class="flex items-center">
-    <p-button label="Add Field" (click)="onSubmit()" />
-  </div>
+  <!--  @if (true) {-->
+  <!--    &lt;!&ndash;    <p-button label="Search" icon="pi pi-check" (onClick)="addNewOption()" />&ndash;&gt;-->
 
-</form>
+  <!--    <div class="flex items-center">-->
+  <!--      <input type="text" pInputText formControlName="options" />-->
+  <!--    </div>-->
+  <!--  }-->
