--- a/src/app/presentation/features/form-designer/components/form-entry/form-entry.component.html
+++ b/src/app/presentation/features/form-designer/components/form-entry/form-entry.component.html
@@ -1,34 +1,28 @@
-<div>
-  <div class="flex items-center">
-    <label for="title">Form Title: </label>
-    <input id="title" type="text" pInputText [(ngModel)]="form.title" />
+<div class="flex flex-col md:flex-row gap-8">
+  <div class="md:w-1/3">
+    <div class="card flex flex-col gap-4">
+      <div class="font-semibold text-xl">Create Custom Form</div>
+      <div class="flex flex-col gap-2">
+        <label for="title">Form Title: </label>
+        <input id="title" type="text" pInputText [(ngModel)]="form.title" />
+      </div>
+      <div class="flex flex-col gap-2">
+        @if (fieldEntryMode == FieldEntryModeEnum.add) {
+          <app-field-entry (enterField)="enterField($event)"></app-field-entry>
+        } @else if (fieldEntryMode === FieldEntryModeEnum.edit){
+          <app-field-entry (enterField)="enterField($event)" [field]="field"></app-field-entry>
+        }
+      </div>
+      <div class="flex flex-col gap-2">
+          <p-button label="Add Form" (click)="createForm()" />
+      </div>
+    </div>
   </div>
-  <div class="flex items-center">
-    <p-button label="Add Field" (click)="addField()" />
-  </div>
-  <hr>
-  <ul>
-    @for (field of form.fields; track $index) {
-      <li>
-        {{ field | json }}
-      </li>
-      <li>
-        <p-button label="delete Field" (click)="deleteField($index)" />
-      </li>
-      <li>
-        <p-button label="edit Field" (click)="updateField($index,field)" />
-      </li>
-      <hr />
-    }
-  </ul>
-  <hr>
-  @if (fieldEntryMode == FieldEntryModeEnum.add) {
-    <app-field-entry (enterField)="enterField($event)"></app-field-entry>
-  } @else if (fieldEntryMode === FieldEntryModeEnum.edit){
-    <app-field-entry (enterField)="enterField($event)" [field]="field"></app-field-entry>
-  }
-  <div class="flex items-center">
-    <p-button label="Add Form" (click)="createForm()" />
+  <div class="md:w-2/3">
+    <div class="card flex flex-col gap-4">
+      <p-button label="Add New Field" (click)="addField()" />
+      <app-field-list [fields]="form.fields" (update)="updateField($event)"  (delete)="deleteField($event)" (preview)="previewField($event)"></app-field-list>
+    </div>
   </div>
 </div>
 
